--- a/index.css
+++ b/index.css
@@ -45,3 +45,17 @@ body{
 	right: 20px;
 	position: absolute;
 }
+
+#insert-btn{
+	position: absolute;
+	top: 85px;
+	right: 20px;
+	display: none;
+}
+
+#exit-mini{
+	position: relative;
+	top: -900px;
+	left: 100px;
+	width: 50px;
+}
