--- a/index.css
+++ b/index.css
@@ -46,13 +46,6 @@ body{
 	position: absolute;
 }
 
-#insert-btn{
-	position: absolute;
-	top: 85px;
-	right: 20px;
-	display: none;
-}
-
 #exit-mini{
 	width: 50px;
 	position: absolute;
@@ -63,4 +56,16 @@ body{
 	width: 100px;
 	position: absolute;
 	top:100px;
+}
+
+#proof-panel{
+	position: absolute;
+	top: 85px;
+	right: 20px;
+	display: none;
+	text-align: center;
+}
+
+button:disabled {
+	background-color: #DCDCDC;
 }
