--- a/index.css
+++ b/index.css
@@ -2,6 +2,7 @@ body{
 	margin:0px;
 	overflow-x: hidden;
 	overflow-y: hidden;
+	font-family: Helvetica, Arial;
 }
 
 .btn{
@@ -64,6 +65,7 @@ body{
 	right: 20px;
 	display: none;
 	text-align: center;
+	font-size: 17px;
 }
 
 button:disabled {
