--- a/index.css
+++ b/index.css
@@ -5,6 +5,10 @@ body{
 	font-family: Helvetica, Arial;
 }
 
+button:disabled {
+	background-color: #DCDCDC;
+}
+
 .btn{
 	z-index: 999;
 
@@ -25,6 +29,19 @@ body{
 
 .btn-proof{
 	border-bottom: 5px solid green;
+}
+
+.msg{
+	background-color: lightgreen;
+	border-radius: 5px;
+	font-size: 15px;
+	padding: 10px;
+	/*line-height: 50px;*/
+	word-wrap: break-word;
+}
+
+.err{
+	background-color: orangered;
 }
 
 #mini-canvas{
@@ -68,6 +85,14 @@ body{
 	font-size: 17px;
 }
 
-button:disabled {
-	background-color: #DCDCDC;
+#msg-buff{
+	margin-left: auto;
+	margin-right: auto;
+	max-width: 500px;
+	position: absolute;
+	bottom: 10px;
+	left: 10px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
