--- a/index.css
+++ b/index.css
@@ -10,7 +10,7 @@ button:disabled {
 }
 
 .btn{
-	z-index: 999;
+	z-index: 10;
 
 	background-color: white;
 	border-left: 1px solid gray;
@@ -21,6 +21,14 @@ button:disabled {
 	font-size: 20px;
 
 	border-radius: 5px;
+}
+
+.exit-btn{
+	float: right;
+	z-index: 10px;
+	background-color: white;
+	border-radius: 5px;
+	font-size: 12px;
 }
 
 .btn-transform{
@@ -95,4 +103,32 @@ button:disabled {
 	display: flex;
 	justify-content: center;
 	align-items: center;
+}
+
+#options-btn{
+	position: absolute;
+	left: 10px;
+	top: 10px;
+	width: 100px;
+	font-size: 15px;
+}
+
+#model-background{
+	width:100%;
+	height: 100%;
+	position: absolute;
+	z-index: 11;
+	background-color : rgba(0, 0, 0, 0.25);;
+	top: 0;
+	display: flex;
+	align-content: center;
+	justify-content: center;
+}
+
+#model-panel{
+	background-color: white;
+	margin-top: 100px;
+	height: 200px;
+	padding: 20px;
+	border-radius: 5px;
 }
