--- a/index.css
+++ b/index.css
@@ -113,7 +113,7 @@ button:disabled {
 	font-size: 15px;
 }
 
-#model-background{
+#modal-background{
 	width:100%;
 	height: 100%;
 	position: absolute;
@@ -125,7 +125,7 @@ button:disabled {
 	justify-content: center;
 }
 
-#model-panel{
+#modal-panel{
 	background-color: white;
 	margin-top: 100px;
 	height: 200px;
